fix(#505): Modeline trait value types in Camel K
- Make sure to use number type for trait values that do not use quotes
- Enable the user to set trait values as numbers in modeline trait config (e.g. container.port)